# kraken-lsp

./: CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: main.rs  server.rs
src/analysis/: document.rs  mod.rs
src/handlers/: completion.rs  definition.rs  diagnostics.rs  hover.rs  mod.rs  references.rs  symbols.rs
tests/: integration_test.rs
